tests/valid/test_type_27.wyal
assert:
    forall(!!int x):
        if:
            x >= 1
        then:
            x >= 0