tests/invalid/test_076.wyal
assert:
    forall(int&!int x):
        x >= 0
